src/core/Claroline/PluginBundle/Tests/stub/plugin/extension/Invalid/NonConventionalFQCN1/AdditionalNamespaceSegment/InvalidNonConventionalFQCN1.php
<?php

namespace Invalid\NonConventionalFQCN1\AdditionalNamespaceSegment;

use Claroline\PluginBundle\AbstractType\ClarolineExtension;

class InvalidNonConventionalFQCN1 extends ClarolineExtension
{
   /**
    * Invalid because it adds an extra segment to the FQCN convention.
    */
}